[html,css] pop-up title of element

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -143,6 +143,8 @@
 			<span class="ato">1</span>
 
 			<span class="m_ato">1,00794</span>
+
+			<span class="title">Hidrogênio <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento gases_nobres" id="helio" title="Hélio" >
@@ -150,6 +152,8 @@
 			<span class="ato">2</span>
 
 			<span class="m_ato">4,002602</span>
+
+			<span class="title">Hélio <div class="connect"></div></span>
 		</a>
 
 	</div>
@@ -158,11 +162,15 @@
 		<a href="" class="elemento m_alcalinos" id="litio" title="Lítio">
 			<span class="simb">Li</span>
 			<span class="ato">3</span>
+
+			<span class="title">Lítio <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_alcalino_terrosos" id="berilio" title="Berílio">
 			<span class="simb">Be</span>
 			<span class="ato">4</span>
+
+			<span class="title">Berílio <div class="connect"></div></span>
 		</a>
 
 	</div>
@@ -171,11 +179,15 @@
 		<a href="" class="elemento m_alcalinos" id="sodio" title="Sódio">
 			<span class="simb">Na</span>
 			<span class="ato">11</span>
+
+			<span class="title">Sódio <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_alcalino_terrosos" id="magnesio" title="Magnésio">
 			<span class="simb">Mg</span>
 			<span class="ato">12</span>
+
+			<span class="title">Magnésio <div class="connect"></div></span>
 		</a>
 
 	</div>
@@ -184,61 +196,85 @@
 		<a href="" class="elemento m_alcalinos" id="potassio" title="Potássio">
 			<span class="simb">K</span>
 			<span class="ato">19</span>
+
+			<span class="title">Potássio <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_alcalino_terrosos" id="calcio" title="Cálcio">
 			<span class="simb">Ca</span>
 			<span class="ato">20</span>
+
+			<span class="title">Cálcio <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_transicao" id="escandio" title="Escândio">
 			<span class="simb">Sc</span>
 			<span class="ato">21</span>
+
+			<span class="title">Escândio <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_transicao" id="titanio" title="Titânio">
 			<span class="simb">Ti</span>
 			<span class="ato">22</span>
+
+			<span class="title">Titânio <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_transicao" id="vanadio" title="Vanádio">
 			<span class="simb">V</span>
 			<span class="ato">23</span>
+
+			<span class="title">Vanádio <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_transicao" id="cromo" title="Crômo">
 			<span class="simb">Cr</span>
 			<span class="ato">24</span>
+
+			<span class="title">Crômo <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_transicao" id="manganes" title="Manganês">
 			<span class="simb">Mn</span>
 			<span class="ato">25</span>
+
+			<span class="title">Manganês <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_transicao" id="ferro" title="Ferro">
 			<span class="simb">Fe</span>
 			<span class="ato">26</span>
+
+			<span class="title">Ferro <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_transicao" id="cobalto" title="Cobalto">
 			<span class="simb">Co</span>
 			<span class="ato">27</span>
+
+			<span class="title">Cobalto <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_transicao" id="niquel" title="Níquel">
 			<span class="simb">Ni</span>
 			<span class="ato">28</span>
+
+			<span class="title">Níquel <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_transicao" id="cobre" title="Cobre">
 			<span class="simb">Cu</span>
 			<span class="ato">29</span>
+
+			<span class="title">Cobre <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_transicao" id="zinco" title="Zinco">
 			<span class="simb">Zn</span>
 			<span class="ato">30</span>
+
+			<span class="title">Zinco <div class="connect"></div></span>
 		</a>
 
 	</div>
@@ -247,61 +283,85 @@
 		<a href="" class="elemento m_alcalinos" id="rubidio" title="Rubídio">
 			<span class="simb">Rb</span>
 			<span class="ato">37</span>
+
+			<span class="title">Rubídio <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_alcalino_terrosos" id="estroncio" title="Estrôncio">
 			<span class="simb">Sr</span>
 			<span class="ato">38</span>
+
+			<span class="title">Estrôncio <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_transicao" id="itrio" title="Ítrio">
 			<span class="simb">Y</span>
 			<span class="ato">39</span>
+
+			<span class="title">Ítrio <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_transicao" id="zirconico" title="Zircônico">
 			<span class="simb">Zr</span>
 			<span class="ato">40</span>
+
+			<span class="title">Zircônico <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_transicao" id="niobio" title="Nióbio">
 			<span class="simb">Nb</span>
 			<span class="ato">41</span>
+
+			<span class="title">Nióbio <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_transicao" id="molibdemio" title="Molibdêmio">
 			<span class="simb">Mo</span>
 			<span class="ato">42</span>
+
+			<span class="title">Molibdêmio <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_transicao" id="tecnicio" title="Tecnécio">
 			<span class="simb">Tc</span>
 			<span class="ato">43</span>
+
+			<span class="title">Tecnécio <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_transicao" id="rutenio" title="Rutênio">
 			<span class="simb">Ru</span>
 			<span class="ato">44</span>
+
+			<span class="title">Rutênio <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_transicao" id="rodio" title="Ródio">
 			<span class="simb">Rh</span>
 			<span class="ato">45</span>
+
+			<span class="title">Ródio <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_transicao" id="paladio" title="Paládio">
 			<span class="simb">Pd</span>
 			<span class="ato">46</span>
+
+			<span class="title">Paládio <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_transicao" id="prata" title="Prata">
 			<span class="simb">Ag</span>
 			<span class="ato">47</span>
+
+			<span class="title">Prata <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_transicao" id="cadmio" title="Cádmio">
 			<span class="simb">Cd</span>
 			<span class="ato">48</span>
+
+			<span class="title">Cádmio <div class="connect"></div></span>
 		</a>
 
 
@@ -311,11 +371,15 @@
 		<a href="" class="elemento m_alcalinos" id="cesio" title="Césio">
 			<span class="simb">Cs</span>
 			<span class="ato">55</span>
+
+			<span class="title">Césio <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_alcalino_terrosos" id="bario" title="Bário">
 			<span class="simb">Ba</span>
 			<span class="ato">56</span>
+
+			<span class="title">Bário <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento lantanideos" id="lantanideos" title="Lantanídeos">
@@ -328,11 +392,15 @@
 		<a href="" class="elemento m_alcalinos" id="francio" title="Frâncio">
 			<span class="simb">Fr</span>
 			<span class="ato">87</span>
+
+			<span class="title">Frâncio <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento m_alcalino_terrosos" id="radio" title="Rádio">
 			<span class="simb">Ra</span>
 			<span class="ato">88</span>
+
+			<span class="title">Rádio <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento actinideos" id="actinideos" title="Actinídeos">
@@ -349,11 +417,15 @@
 		<a href="" class="elemento lantanideos" id="lantanio" title="Lantânio">
 			<span class="simb">La</span>
 			<span class="ato">57</span>
+
+			<span class="title">Lantânio <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento lantanideos" id="cerio" title="Cério">
 			<span class="simb">Ce</span>
 			<span class="ato">58</span>
+
+			<span class="title">Cério <div class="connect"></div></span>
 		</a>
 
 	</div>
@@ -364,11 +436,15 @@
 		<a href="" class="elemento actinideos" id="actinio" title="Actínio">
 			<span class="simb">Ac</span>
 			<span class="ato">89</span>
+
+			<span class="title">Actínio <div class="connect"></div></span>
 		</a>
 
 		<a href="" class="elemento actinideos" id="torio" title="Tório">
 			<span class="simb">Th</span>
 			<span class="ato">90</span>
+
+			<span class="title">Tório <div class="connect"></div></span>
 		</a>
 
 	</div>
