--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -348,7 +348,7 @@ section#tabela .line{ width: 100%; height: 64px; float: left; }
 
 section#tabela .line h2{ width: 120px; float: left; padding: 20px 20px 0px 0px; }
 
-section#tabela .line .elemento{ display: block; width: 60px; height: 45px; text-align: center; margin: 3px; padding-top: 10px; border: 3px solid #444; position: relative; border-radius: 6px; -webkit-border-radius: 6px; -moz-border-radius: 6px; }
+section#tabela .line .elemento{ position: relative; display: block; width: 60px; height: 45px; text-align: center; margin: 3px; padding-top: 10px; border: 3px solid #444; border-radius: 6px; -webkit-border-radius: 6px; -moz-border-radius: 6px; }
 
 section#tabela .line .elemento .simb{ font-size: 35px; color: #333;  }
 
@@ -357,6 +357,12 @@ section#tabela .line .elemento .simb_pequeno{ font-size: 15px; color: #333; }
 section#tabela .line .elemento .ato{ font-size: 16px; color: #fff; position: absolute; top: 0px; right: 4px; }
 
 section#tabela .line .elemento .m_ato{ display: none; }
+
+section#tabela .line .elemento:hover .title{ z-index: 999; opacity: 1; transition: opacity .2s; -webkit-transition: opacity .2s; -moz-transition: opacity .2s; -o-transition: opacity .2s; -ms-transition: opacity .2s; }
+
+section#tabela .line .elemento .title{ display: inline-table; position: relative; top: -36px; right: -66px; z-index: -99; width: 100%; padding: 5px 8px; font-size: 12px; font-weight: bold; color: #444; background: #FFF; border: 3px solid #444; border-radius: 16px; -webkit-border-radius: 16px; -moz-border-radius: 16px; opacity: 0; transition: opacity .2s; -webkit-transition: opacity .2s; -moz-transition: opacity .2s; -o-transition: opacity .2s; -ms-transition: opacity .2s; }
+
+section#tabela .line .elemento .title .connect{ position: absolute; top: 8px; left: -8px; width: 6px; background: #444; padding: 2px 0px; }
 
 
 
