--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -103,12 +103,13 @@
 
 	<nav id="sublinks">
 		<ul>
-			<li><a id="toggle_conteudo" href="">Ocultar informações ↑</a></li>
 			<li><a href="">Familias</a></li>
 			<li><a href="">Periodos</a></li>
 			<li><a href="">Nº Atômico</a></li>
 		</ul>
 	</nav>
+
+	<a class="fade-off" >×</a>
 
 </section>
 
